[package]
name = "ece320tools"
version = "0.3.0"
edition = "2021"

[dependencies]
riscv_tools = { git = "https://git.jekel.ca/jzj/riscv_tools.git", branch = "jzj/stableish_branch_for_ece320_tools" }

[lib]
name = "common"
path = "rust/lib.rs"

[[bin]]
name = "betterpd4diff"
path = "rust/bin/betterpd4diff.rs"

[[bin]]
name = "pd5diff"
path = "rust/bin/pd5diff.rs"

[[bin]]
name = "pd6boarddiff"
path = "rust/bin/pd6boarddiff.rs"

[[bin]]
name = "pd6simdiff"
path = "rust/bin/pd6simdiff.rs"

[profile.release]
codegen-units   = 1
strip           = true
overflow-checks = false
panic           = "abort"
lto             = true
